@@ -53,7 +53,7 @@ namespace bt
 		virtual void close();
 		virtual void open();
 		virtual QString getOutputPath() const;
-		virtual void changeOutputPath(const QString& outputpath);
+		virtual void changeOutputPath(const QString & outputpath);
 		virtual void preallocateDiskSpace(PreallocationThread* prealloc);
 		virtual bool hasMissingFiles(QStringList & sl);
 		virtual void deleteDataFiles();
